--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	sourceCompatibility = '17'
+	withJavadocJar()
+	withSourcesJar()
 }
 
 configurations {
@@ -24,14 +26,31 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
-	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+	runtimeOnly 'com.h2database:h2:1.4.200'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.withType(org.gradle.api.tasks.javadoc.Javadoc) {
+	source = sourceSets.main.allJava
+	classpath = configurations.compileClasspath
+	options {
+		author = true
+		version = true
+		links("https://docs.oracle.com/javase/8/docs/api/")
+	}
+	destinationDir = file("$buildDir/docs/javadoc")
+	doLast {
+		println("Javadoc generated in ${destinationDir.path}")
+	}
 }
