--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,7 +24,7 @@ spring:
 logging:
   file:
     path: C:\Users\nargi\OneDrive\Documents\web2\resfuldemo
-    name: file.log
+    name: restfuldemofile.log
   level:
     org:
       springframework:
